@@ -442,14 +442,11 @@ CAMLprim value caml_float_compare(value vf, value vg)
 {
   double f = Double_val(vf);
   double g = Double_val(vg);
-  if (f == g) return Val_int(0);
-  if (f < g) return Val_int(-1);
-  if (f > g) return Val_int(1);
-  /* One or both of f and g is NaN.  Order according to the
-     convention NaN = NaN and NaN < x for all other floats x. */
-  if (f == f) return Val_int(1);  /* f is not NaN, g is NaN */
-  if (g == g) return Val_int(-1); /* g is not NaN, f is NaN */
-  return Val_int(0);              /* both f and g are NaN */
+  /* If one or both of f and g is NaN, order according to the convention
+     NaN = NaN and NaN < x for all other floats x. */
+  /* This branchless implementation is from GPR#164.
+     Note that [f == f] if and only if f is not NaN. */
+  return Val_int((f > g) - (f < g) + (f == f) - (g == g));
 }
 
 enum { FP_normal, FP_subnormal, FP_zero, FP_infinite, FP_nan };
